# aoc

./: Cargo.toml
src/: main.rs  util.rs
src/aoc/: day.rs  exec.rs  mod.rs  part.rs  part_status.rs  progress_report.rs  puzzle.rs  puzzle_test_input.rs  puzzlespec.rs  year.rs
src/aoc/year2019/: day1.rs  day2.rs
src/aoc/year2023/: day1.rs  day2.rs  day3.rs  day4.rs
src/util/: parsing.rs
