[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_of_code_traits = "0.2.0"
anyhow = "1.0.75"
aoc-client = "0.2.0"
clap = { version = "4.4.10", features = ["env", "derive"] }
html2text = "0.6.0"
inventory = "0.3.13"
itertools = "0.12.0"
nalgebra = "0.32.3"
ndarray = "0.15.6"
nutype = { version = "0.4.0", features = ["new_unchecked"] }
regex = "1.10.2"
scratch = "1.0.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
